--- a/styles.css
+++ b/styles.css
@@ -834,6 +834,9 @@
   .h-11 {
     height: calc(var(--spacing) * 11);
   }
+  .h-20 {
+    height: calc(var(--spacing) * 20);
+  }
   .h-24 {
     height: calc(var(--spacing) * 24);
   }
@@ -885,8 +888,14 @@
   .w-4 {
     width: calc(var(--spacing) * 4);
   }
+  .w-6 {
+    width: calc(var(--spacing) * 6);
+  }
   .w-11 {
     width: calc(var(--spacing) * 11);
+  }
+  .w-20 {
+    width: calc(var(--spacing) * 20);
   }
   .w-40 {
     width: calc(var(--spacing) * 40);
@@ -2332,6 +2341,12 @@
   .text-gray-400 {
     color: var(--color-gray-400);
   }
+  .text-green-900 {
+    color: var(--color-green-900);
+  }
+  .text-purple-700 {
+    color: var(--color-purple-700);
+  }
   .text-sky-700 {
     color: var(--color-sky-700);
   }
@@ -2343,6 +2358,9 @@
   }
   .text-slate-50 {
     color: var(--color-slate-50);
+  }
+  .text-slate-300 {
+    color: var(--color-slate-300);
   }
   .text-white {
     color: var(--color-white);
@@ -2970,6 +2988,13 @@
     &:hover {
       @media (hover: hover) {
         color: var(--color-sky-950);
+      }
+    }
+  }
+  .hover\:text-white {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-white);
       }
     }
   }
